tenzir/tests/exec/expr/ufcs_error.txt
error: expected additional positional argument `prefix`
 --> exec/expr/ufcs_error.tql:3:12
  |
3 |   x: "abc".starts_with(),
  |            ^^^^^^^^^^^ 
  |
  = usage: starts_with(x:string, prefix:string)
  = docs: https://docs.tenzir.com/tql2/functions/starts_with

error: expected additional positional argument `prefix`
 --> exec/expr/ufcs_error.tql:4:6
  |
4 |   y: starts_with("abc"),
  |      ^^^^^^^^^^^ 
  |
  = usage: starts_with(x:string, prefix:string)
  = docs: https://docs.tenzir.com/tql2/functions/starts_with
